--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,83 @@ output:
 
 ## Loading and preprocessing the data
 
+1. Load the data (i.e. Unzip the file)
 
+```{r}
+unzip("activity.zip")
+```
+
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+```{r}
+activitydata <- read.table("./activity.csv", sep = ",", header = TRUE)
+```
 
 ## What is mean total number of steps taken per day?
 
+For this part of the assignment, we can ignore the missing values in the dataset.
 
+1. Calculate the total number of steps taken per day
+
+```{r}
+StepsPerDay <- aggregate(activitydata$steps, by=list(activitydata$date), FUN=sum, na.rm=TRUE)
+df = data.frame(StepsPerDay)
+colnames(df) <- c("Date", "Steps")
+df$Steps <- as.numeric(df$Steps)
+print(df)
+```
+
+2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
+
+```{r}
+hist(df$Steps, main = "Histogram of Steps Per Day", xlab = "Steps", col = "red")
+```
+
+3. Calculate and report the mean and median of the total number of steps taken per day
+
+```{r}
+## Mean of total steps
+mean(df$Steps)
+
+## Median of total steps
+median(df$Steps)
+```
 
 ## What is the average daily activity pattern?
 
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
+```{r}
+MeanStepsPerInterval <- aggregate(activitydata$steps, by=list(activitydata$interval), FUN=mean, na.rm=TRUE)
+df2 = data.frame(MeanStepsPerInterval)
+colnames(df2) <- c("Interval", "AverageSteps")
+df2$AverageSteps <- as.numeric(df2$AverageSteps)
+plot(df2$Interval, df2$AverageSteps, type="l", main = "Time Series Plot", xlab="5-Minute Interval", ylab="Average Number of Steps")
+```
 
-## Imputing missing values
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
+```{r}
+## Finds the 5-minute interval with max average number of steps across all days
+## in the case, the 104th record in the data frame, corresponds to interval 835
+df2[which.max(df2[,2]),1]
+```
 
+## Inputing missing values
+
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+For this part the weekdays() function is helpful here. Use the dataset with the filled-in missing values for this part.
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
